resources/public/style.css
* {
    border-style: solid;
    border-width: 0px;
    border-color: hsl(0, 0%, 80%);
    box-sizing: border-box;
    background-color: transparent;
}

body {
    margin-top: -2px;  /* keep from having scrollbar */
    display: flex;
    flex-direction: column;
    height: 100vh;
    overflow-y: hidden;
}

#app {
    flex: 0 1 auto;
    display: flex;
    flex-direction: row;
}

#root.table {
    flex: 0 1 auto;
    min-width: 0;
}

#root.wrapped-element, #root.item {
    width: 100%;
    flex: 0 1 auto;
    overflow-x: hidden;
    overflow-y: auto;
    margin: 0;
}

.selected {
    box-shadow: inset 0 0 5px 3px hsla(220, 100%, 55%, 1);
}

/* In general, if there is a border, there is a matching negative margin
   on the right and bottom. That allows boxes to stack. Containment may
   require additional negative margins on the top and left.

   Usually, the border is set by the containing DOM element, but sometimes
   it is set explicitly. */
.bordered {
    border-width: 2px;
    margin: 0px -2px -2px 0px;
}

/* --- Generic indentation --- */

.indent-wrapper {
    display: flex;
    flex-direction :column;
    padding-left: 8px;
}

.indent-wrapper > * {
    flex-grow: 1;
}

/* --- Basic items and stacks of items --- */

.item.editable, .item > .editable { 
    padding: 3px;
}

.item.with-elements > :last-child {
    margin: 0px 5px 5px 6px;
}

.editable {
    min-height: 15px; /* Make no-content cells have minimum height */
}

/* For ??? in column headers */
.placeholder {
    font-size: smaller;
    font-style: oblique;
    color: rgba(0, 0, 0, 0.4);
}

.content-text {
    min-height: 20px;
    overflow-wrap: break-word;
}

/* grayish indicators of places where there is no current content */
.editable:not(.content-text) {
    background-color: hsl(0, 0%, 95%);
}

.item-stack > .item {
    margin: 0px 3px 0px 3px;
}

.item-stack > .item.editable, .item-stack > .item > .editable { 
    padding: 3px 0px 3px 0px;
}

.item-stack > .item.with-elements > :last-child {
    margin: 0px 2px 5px 3px;
}

.item-stack > .item + .item {
    border-width: 2px 0px 0px 0px;
}

.for-multiple, .for-multiple > .item-stack {
    vertical-align: middle;
}

.item-stack {
    vertical-align: top;
}

.with-elements {
    text-align: left;
}

.elements-wrapper {
    /* The boxes inside have margins of -2px all around, so this gives
       three pixels, except for 6 on the left. */
    padding: 5px 5px 5px 8px;
}

/* --- tabs --- */

.tabbed {
    display: flex;
    flex-direction: column;
}

.tabs-holder, .tab-sequence {
    flex: none;
    display: flex;
    align-items: stretch;
    z-index: 1;  /* Make the ::before and ::after borders go in front */
    position:relative;  /* Make the z-index effective */
    /* The tabs are give in reverse order, so the logically first tab will
       come on top in the stacking order. */
    flex-direction: row-reverse;
    justify-content: flex-end;
}

.tabs-holder {
    margin-bottom: 2px;
}

.tab-tree {
    background-color: white;
}

.multi-tab {
    text-align: center;
}

.tab {
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    text-align: center;
    border-top-width: 2px;
    border-bottom-width:2px;
    margin-left: 12px;
    margin-right: 12px;
    min-width: 20px;
    width: fit-content;
    position: relative;
}

.tab::before, .tab::after{
    height: 100%;
    /* Make its background override edges of on other tabs, but not content. */
    width: 30px;
    background-color: white;
    z-index: -1;    
    border-style: solid;
    border-color: hsl(0, 0%, 80%);
    display: block;
    content:" ";
    top: -2px;
    position: absolute;
    transform-origin: top;
}

.tab::before {
    border-width: 2px 0px 2px 2px;
    border-top-left-radius: 7px;
    left: -8px;
    transform:skewX(-15deg);
}

.tab::after {
    border-width: 2px 2px 2px 0px;
    border-top-right-radius: 7px;
    right: -8px;
    transform:skewX(15deg);
}

.tab.item-stack {
    /* Leave room for selection box-shadow. */
    padding-top: 2px;
}

.tab.empty-child.empty-child.empty-child.empty-child {
    background-color: transparent;
    width: 40px;
}

.tab.virtualTab, .tab.virtualTab::before, .tab.virtualTab::after { 
     background-color: hsl(0, 0%, 95%);
}

.tab.virtualTab {
    position: relative;
}

.tab.complex {
    background-color: transparent;
    width: 150px;
}

.tab.chosen, .tab-tree.chosen {
    z-index: 2;
}

.tab.chosen {
    box-shadow: inset 0px 2px hsl(0, 0%, 80%);
    border-bottom: 0px;
}

.tab.chosen.selected {
    box-shadow: inset 0px 2px hsl(0, 0%, 80%),
}

 /* Put the selected box shadow on the select holder, because the :left and
    :right of the tab can overlap its contents. */
.tab.chosen > .select_holder {
    box-shadow: inset 0 0 5px 3px hsla(220, 100%, 55%, 1);
}

.tab.chosen::before {
    box-shadow: inset 2px 2px hsl(0, 0%, 80%);
    border-bottom: 0px;
}

.tab.chosen::after {
    box-shadow: inset -2px 2px hsl(0, 0%, 80%);
    border-bottom: 0px;
}

/* --- tags --- */

.tag {
    background-color: hsl(194, 100%, 88%);
}

.tag > .tag.tag.tag.tag.tag.tag {
    background-color: transparent;
}

.item:not(.tag), .item-stack:not(.tag) {
    background-color: white;
}

.editable.tag.tag.tag.tag:not(.content-text),
.tag.tag.tag.tag > .editable:not(.content-text) {
    background-color: hsl(194, 50%, 88%);
}

/* --- label-element pairs: one column format --- */

.horizontal-tags-element {
    display: flex;
    flex-direction: row;
}

.horizontal-tags-element.narrow > * {
    border-width: 2px;
    margin-right: -2px;
    margin-bottom: -2px;
}

.horizontal-tags-element.narrow > :first-child {
    border-bottom-left-radius: 7px;
    border-top-left-radius: 7px;
}

.horizontal-tags-element.narrow > :first-child {
    width: 12px;
}

.horizontal-tags-element.narrow > :last-child {
    flex: 1;
}
/* ... */

